--- a/README.html
+++ b/README.html
@@ -1019,20 +1019,20 @@ body .markdown-body
 <li>安装Node.js环境<br />
 <a href="http://nodejs.cn/">Node.js中文网</a></li>
 <li>安装vue-cli 脚手架工具<ul>
-<li>npm install -g vue-cli 直接安装</li>
+<li><code>npm install -g vue-cli</code> 直接安装</li>
 <li>利用淘宝镜像 <br />
-    npm install -g cnpm &ndash;registry=<a href="https://registry.npm.taobao.org">https://registry.npm.taobao.org</a><br />
+<code>npm install -g cnpm --registry=https://registry.npm.taobao.org</code><br />
 <a href="http://npm.taobao.org/">淘宝NPM 镜像</a></li>
 </ul>
 </li>
 <li>
 <p>安装完成之后<br />
-    vue &ndash;version 查看版本<br />
-    vue init webpack 项目名字<br />
-    cd 项目名字<br />
-    npm install<br />
+<code>vue --version</code> 查看版本<br />
+<code>vue init webpack 项目名字</code><br />
+<code>cd 项目名字</code><br />
+<code>npm install</code><br />
     ------complete------<br />
-    npm run dev</p>
+<code>npm run dev</code></p>
 </li>
 <li>
 <p>预览</p>
